chore: Fix table word-wrapping

--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -22,3 +22,7 @@ p + section h2, h1 + section h2 {
 	background-color: #4e4a4a;
 }
 
+/* https://github.com/readthedocs/sphinx_rtd_theme/issues/1505#issuecomment-2258832864 */
+.wy-table-responsive table td, .wy-table-responsive table th {
+    white-space: normal;
+}
